<resources>
    <string name="esperar">Esperando</string>
    <string name="cargando_participantes">Cargando</string>
    <string name="app_name">El Vozarron</string>
    <string name="nombreEntrenador">Nombre</string>
    <string name="subTitulo">Coach</string>
    <string name="detalles">Detalles</string>
    <string name="txtCardPortada">subtitulo</string>
    <string name="menu_portada">Portada</string>
    <string name="menu_entrenadores">Entrenadores</string>
    <string name="menu_participantes">Participantes</string>
    <string name="menu_votacion">Votacion</string>
    <string name="menu_idioma">Idioma</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hint_buscarParticipante">Buscar Participante</string>
    <string name="tituloParticipante">Participante</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_cedula">Cedula</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_tipo">Relacion con la Universidad</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="elegir_entrenador">Elija el entrenador</string>
    <string name="hint_url">Url</string>
    <string name="menu_agregar">Agregar Participante</string>
    <string name="nombre_entrenador">Entrenador:</string>
    <string name="seleccionar_entrenador">Entrenadores</string>
    <string name="seleccionar_relacion">Relacion con la Universidad</string>
    <string name="votacion_exitosa">Votacion Exitosa</string>
    <string name="texto_compartir">Comparte tu voto
    en Facebook o Twitter</string>
    <string name="votacion_fallida">Votacion Fallida</string>
    <string name="texto_fallido">Las votaciones se encuentran deshabilitadas</string>

    <string name="id_adele">1</string>
    <string name="nombre_adele">Adele</string>
    <string name="detalles_adele">Adele Laurie Blue Adkins (Tottenham, Inglaterra,
        5 de mayo de 1988), conocida simplemente como Adele, es una cantante y compositora
        británica. Desde muy joven mostró su interés por la música y en 2006 egresó de la BRIT
        School de Artes Escénicas y Tecnología, año en el firmó un contrato con XL Recordings,
        tras ser descubierta por unas demos que un amigo publicó en MySpace.</string>

    <string name="id_jhonny">2</string>
    <string name="nombre_jhnonny">Jhonny Rivera</string>
    <string name="detalles_jhonny">JHONNY RIVERA. (Jhon Jairo Rivera Valencia) Nació en
    Pereira-Risaralda un 23 de Febrero, la mayor parte de su vida transcurrió en la vereda
        Pérez jurisdicción del corregimiento de Arabia - Pereira, región que recuerda con
        mucho cariño, pues allí en las labores propias del campo al lado de su padre hizo
        amigos que perdurarán en su corazón. Su humilde  familia esta conformada por sus
        padres.</string>

    <string name="id_rihana">3</string>
    <string name="nombre_rihana">Rihana</string>
    <string name="detalles_rihana">Robyn Rihanna Fenty (Bridgetown, 20 de febrero de 1988),
        conocida simplemente como Rihanna, es una cantante, actriz y diseñadora de moda
        barbadense. Comenzó su carrera en el 2003 cuando audicionó para el productor musical
        Evan Rogers. A la edad de dieciséis, Rogers, decidió llevarla a los Estados Unidos para
        grabar maquetas. Posteriormente realizó una audición para Jay-Z y firmó un contrato de
        seis álbumes con Def Jam Recordings.</string>

    <string name="mensaje_alerta">Debe seleccionar un Entrenador</string>
    <string name="mensaje_alertaU">Debe seleccionar la relacion con la Universidad</string>
    <string name="btnVideo">Ver Video</string>

    <string name="mensaje_conexion_internet"> El dispositivo NO esta conectado a internet, desea activar la conexion ?</string>
    <string name="titulo_advertencia">Advertencia</string>
    <string name="cancelar_conexion">Cancelar</string>
    <string name="aceptar_conexion">Aceptar</string>
    <string name="facebook_app_id">201060043683956</string>
    <string name="login_facebook">Ingresa con Facebook</string>
    <string name="key_participante">participante</string>

    <string name="tipo_estudiante">Estudiante</string>
    <string name="tipo_profesor">Profesor</string>
    <string name="tipo_administrativo">Administrativo</string>
    <string name="tipo_otros">Otros</string>
    <string name="participante_activo">Activo</string>
    <string name="participante_eliminado">Eliminado</string>
    

</resources>
