<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/identrenador_cardview"
    android:layout_width="match_parent"
    android:layout_height="265dp"
    android:layout_margin="6dp"
    android:padding="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="9dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/marco">

        <TextView
            android:id="@+id/idNombreEntrenador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/nombreEntrenador"
            android:textColor="#980000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idSubTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idNombreEntrenador"
            android:paddingLeft="15dp"
            android:text="@string/subTitulo"
            android:textColor="#000000"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/idImagenEntrenador"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_below="@+id/idSubTitulo"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"/>

        <TextView
            android:id="@+id/idDetalles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idImagenEntrenador"
            android:layout_marginTop="8dp"
            android:paddingLeft="15dp"
            android:text="@string/detalles"
            android:textColor="@color/vinotinto"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>









