<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="com.uniquindio.android.electiva.elvozarron.fragments.AgregarParticipanteFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <LinearLayout
                android:id="@+id/area_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_id" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    app:hintTextAppearance="@style/TextAppearance.Design.Hint">

                    <EditText
                        android:id="@+id/campo_cedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_cedula"
                        android:inputType="number"
                        android:textColor="#ffffff" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/area_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_cedula"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_nombre" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/campo_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_nombre"
                        android:inputType="textPersonName"
                        android:textColor="#ffffff" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/area_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/area_nombre"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_edad" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/campo_edad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_edad"
                        android:inputType="number"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtEntrenador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/area_edad"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/seleccionar_relacion"
                android:textColor="#ffffff"
                android:textSize="13dp" />

            <LinearLayout
                android:id="@+id/area_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEntrenador"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_cedula" />

                <Spinner
                    android:id="@+id/spinnerRelacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"></Spinner>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/area_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/area_tipo"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_url" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/campo_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_url"
                        android:inputType="textWebEditText"
                        android:textColor="#ffffff"></EditText>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtRelacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/area_url"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/seleccionar_entrenador"
                android:textColor="#ffffff"
                android:textSize="15dp" />

            <LinearLayout
                android:id="@+id/relativeEntrenadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRelacion"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_cedula" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"></Spinner>
            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:backgroundTint="#323030"
            android:text="@string/accion_cancelar"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/accion_aceptar"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
