<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="6dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/vinotinto"
        app:cardCornerRadius="5dp"
        app:cardElevation="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/idImagePortada"
                android:layout_width="match_parent"
                android:layout_height="195dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_entrenadores"
                android:textColor="#ffffff"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                android:layout_below="@id/idImagePortada"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview2"
        android:layout_width="176dp"
        android:layout_height="240dp"
        android:layout_below="@id/cardview1"
        android:layout_margin="6dp"
        android:layout_marginLeft="6dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/vinotinto"
        app:cardCornerRadius="5dp"
        app:cardElevation="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/idImagePortada1"
                android:layout_width="match_parent"
                android:layout_height="195dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_participantes"
                android:textColor="#ffffff"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                android:layout_below="@id/idImagePortada1"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview3"
        android:layout_width="176dp"
        android:layout_height="240dp"
        android:layout_below="@id/cardview1"
        android:layout_margin="6dp"
        android:layout_marginRight="6dp"
        android:layout_toRightOf="@id/cardview2"
        android:padding="8dp"
        app:cardBackgroundColor="@color/vinotinto"
        app:cardCornerRadius="5dp"
        app:cardElevation="9dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/idImagePortada2"
                android:layout_width="match_parent"
                android:layout_height="195dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_votacion"
                android:textColor="#ffffff"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textSize="20dp"
                android:layout_below="@id/idImagePortada2"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>